kubernetes/apps/extras/default/linebot/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linebot
  namespace: linebot
spec:
  hostnames: ["linebot.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: line-gateway
          namespace: linebot
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
